* UTIL pan-os-php type=service | actions=name-rename:$$timeout$$ - introduce VARIABLE $$timeout$$
* UTIL  argument 'outputformatset' - correction of 'set commands' order print
* UTIL develop/ssh_connector.php | introduce argument 'setcommandfile=FILE' for quick validation check of create "set commands"

BUGFIX:
* UTIL UI - still in BETA - bugfix to create correct JSON playbook file if location argument is used
* UTIL all MERGER | fix for location=any allowmergingwithupperlevel
* UTIL all MERGER | bugfix to calculate ancestor
* class InterfaceContainer | bugfix if xmlRoot === NULL
* class VirtualRouterContainer | bugfix if VSYS has no XMLnode available to import new Virtual-Router; xmlRoot === null
* UTIL type=xml-issue | bugfix for finding correct sec/natRule for double whitespaces in object name
* UTIL type=device - actions=logforwardingprofile-create-bp | bugfix FW can only have 'set shared log-settings'
* UTIL type=gratuitous-arp | bugfix to get feature working after the migration to classes
* UTIL argument 'outputformatset' | bugfix to include all XMLnode value information

GENERAL:
* class PanAPIConnector | introduce method commitAll() and commitPartial( $user)
* framework | split README into multiple files to get better introduction
* framework | introduce new example - improve the example template
* framework | introduce bash script "create_all_docker_container.sh"


2.0.29 (20220204)
UTILS:
* UTIL type=tag-merger | introduce help info for dupalgorithm=SameName
* UTIL all types | argument "outputformatset" status BETA - return all "set/delete commands" done by a PAN-OS-PHP UTIL script
* class UTIL | improve error handling for file not found if shadow-json is used
* UTIL type=securityprofilegroup | actions=securityProfile-Set - extend output if Profile is not found and skipped

BUGFIX:
* UTIL type=device | actions=securityprofile-create-alert-only - bugfix for PAN-OS 8.1 - including fix for ironskillet download